@@ -1,85 +1,64 @@
 package com.fitness.activityservice.service;
 
-import com.fitness.activityservice.ActivityRepository;
 import com.fitness.activityservice.dto.ActivityRequest;
 import com.fitness.activityservice.dto.ActivityResponse;
 import com.fitness.activityservice.model.Activity;
+import com.fitness.activityservice.repository.ActivityRepository;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.amqp.rabbit.core.RabbitTemplate;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Slf4j
 public class ActivityService {
 
     private final ActivityRepository activityRepository;
-    private final UserValidationService userValidationService;
-    private final RabbitTemplate rabbitTemplate;
 
-    @Value("${rabbitmq.exchange.name}")
-    private String exchange;
-
-    @Value("${rabbitmq.routing.key}")
-    private String routingKey;
-
+    // ✅ CREATE
     public ActivityResponse trackActivity(ActivityRequest request) {
 
-        boolean isValidUser = userValidationService.validateUser(request.getUserId());
-        if (!isValidUser) {
-            throw new RuntimeException("Invalid User: " + request.getUserId());
-        }
+        Activity activity = new Activity();
 
-        Activity activity = Activity.builder()
-                .userId(request.getUserId())
-                .type(request.getType())
-                .duration(request.getDuration())
-                .caloriesBurned(request.getCaloriesBurned())
-                .startTime(request.getStartTime())
-                .additionalMetrics(request.getAdditionalMetrics())
-                .build();
+        activity.setActivityType(request.getActivityType());
+        activity.setDuration(request.getDuration());
+        activity.setCaloriesBurned(request.getCaloriesBurned());
 
-        Activity savedActivity = activityRepository.save(activity);
+        // 🔥 IMPORTANT
+        activity.setUserId(request.getUserId());
 
-        // Publish to RabbitMQ for AI Processing
-        try {
-            rabbitTemplate.convertAndSend(exchange, routingKey, savedActivity);
-        } catch(Exception e) {
-            log.error("Failed to publish activity to RabbitMQ : ", e);
-        }
+        Activity saved = activityRepository.save(activity);
 
-        return mapToResponse(savedActivity);
+        return map(saved);
     }
 
-    private ActivityResponse mapToResponse(Activity activity){
-        ActivityResponse response = new ActivityResponse();
-        response.setId(activity.getId());
-        response.setUserId(activity.getUserId());
-        response.setType(activity.getType());
-        response.setDuration(activity.getDuration());
-        response.setCaloriesBurned(activity.getCaloriesBurned());
-        response.setStartTime(activity.getStartTime());
-        response.setAdditionalMetrics(activity.getAdditionalMetrics());
-        response.setCreatedAt(activity.getCreatedAt());
-        response.setUpdatedAt(activity.getUpdatedAt());
-        return response;
-    }
-
+    // ✅ USER SPECIFIC DATA
     public List<ActivityResponse> getUserActivities(String userId) {
-        List<Activity> activities = activityRepository.findByUserId(userId);
-        return activities.stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+        return activityRepository.findByUserId(userId)
+                .stream()
+                .map(this::map)
+                .toList();
     }
 
-    public ActivityResponse getActivityById(String activityId) {
-        return activityRepository.findById(activityId)
-                .map(this::mapToResponse)
-                .orElseThrow(() -> new RuntimeException("Activity not found with id: " + activityId));
+    // ✅ GET ONE
+    public ActivityResponse getActivityById(String id) {
+
+        Activity activity = activityRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Activity not found"));
+
+        return map(activity);
+    }
+
+    // ✅ MAPPER
+    private ActivityResponse map(Activity activity) {
+        ActivityResponse res = new ActivityResponse();
+
+        res.setId(activity.getId());
+        res.setActivityType(activity.getActivityType());
+        res.setDuration(activity.getDuration());
+        res.setCaloriesBurned(activity.getCaloriesBurned());
+        res.setUserId(activity.getUserId());
+
+        return res;
     }
 }
